--- a/.github/workflows/BFG.yml
+++ b/.github/workflows/BFG.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Download BFG JAR
-        run: wget https://repo1.maven.org/maven2/com/madgag/bfg/1.14.0/bfg-1.14.0.jar bfg.jar
+        run: wget -O bfg.jar https://repo1.maven.org/maven2/com/madgag/bfg/1.14.0/bfg-1.14.0.jar
 
       - name: Run BFG
         run: java -jar bfg.jar --replace-text secret.txt
